Fix wrong padding

--- a/css/index.css
+++ b/css/index.css
@@ -69,7 +69,7 @@ h1, h2, h3, h4, h5, h6 {
 
 .tabcontent > div {
 	padding: 48px;
-	padding-top: 144px;
+	padding-top: 120px;
 }
 
 button {
